@@ -1,3 +1,8 @@
+2005-11-23  Eric Anholt  <anholt@FreeBSD.org>
+
+	* Makefile.am:
+	Use $< instead of $^ to be portable to FreeBSD's make.
+
 2005-11-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* Makefile.am:
